# lyrit-loom

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Makefile  README.md  compose.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: ci.yml
apps/api/: Cargo.toml
apps/api/src/: error.rs  main.rs  routes.rs  state.rs
apps/transcriber/: pyproject.toml
apps/transcriber/src/lyrit_transcriber/: __init__.py  cli.py  contract.py  fake.py
apps/transcriber/tests/: test_cli.py
apps/web/: index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
apps/web/src/: App.test.tsx  App.tsx  WaveformTimeline.test.tsx  WaveformTimeline.tsx  styles.css  transcriptEditor.test.ts  transcriptEditor.ts
apps/web/src/test/: setup.ts
apps/worker/: Cargo.toml
apps/worker/src/: main.rs
contracts/: openapi.yaml  transcriber.schema.json
crates/api-model/: Cargo.toml
crates/api-model/src/: lib.rs
crates/application/: Cargo.toml
crates/application/src/: lib.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/media/: Cargo.toml
crates/media/src/: lib.rs
crates/persistence/: Cargo.toml
crates/persistence/src/: lib.rs
db/migrations/: 0001_jobs.sql  0002_projects_and_assets.sql  0003_transcripts.sql
docs/: ARCHITECTURE.md  DELIVERY_GUIDE.md  DEVELOPMENT.md  ROADMAP.md
docs/decisions/: 0001-modular-monolith-and-durable-worker.md
infra/: nginx.conf
infra/containers/: api.Dockerfile  api.Dockerfile.dockerignore  web.Dockerfile  worker.Dockerfile  worker.Dockerfile.dockerignore
scripts/: check-toolchain.sh  generate-api-client.sh  smoke-job.sh  test-transcriber.sh  validate-config.py  validate-config.sh
