[workspace]
resolver = "2"
members = [
  "apps/api",
  "apps/worker",
  "crates/api-model",
  "crates/application",
  "crates/domain",
  "crates/media",
  "crates/persistence",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "LicenseRef-Proprietary"
publish = false

[workspace.dependencies]
async-stream = "0.3"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros", "multipart"] }
bytes = "1"
futures-util = "0.3"
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "json", "migrate", "macros"] }
thiserror = "2"
time = { version = "0.3", features = ["serde", "formatting", "macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "request-id"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }

[profile.release]
lto = "thin"
strip = true
