[package]
name = "lyrit-api"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
async-stream.workspace = true
axum.workspace = true
futures-util.workspace = true
http.workspace = true
lyrit-api-model = { path = "../../crates/api-model" }
lyrit-application = { path = "../../crates/application" }
lyrit-domain = { path = "../../crates/domain" }
lyrit-media = { path = "../../crates/media" }
lyrit-persistence = { path = "../../crates/persistence" }
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
