[project]
name = "lyrit-transcriber"
version = "0.1.0"
description = "Versioned process boundary for Lyrit Loom transcription"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
  "jsonschema==4.26.0",
  "pyyaml==6.0.3",
]

[project.scripts]
lyrit-transcriber = "lyrit_transcriber.cli:main"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lyrit_transcriber"]
